# outcast-particle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  check_level_name_collisions.py  cmake-variants.json  gmon.out  level1.txt  level2.txt  steam_appid.txt  steam_username_fallback.txt
cmake/: get_steamapi.cmake
codegen/: blueprints.py  codegen.py  cpp_blueprints.py  level_serialization.cpp  serialization.py  yaml_blueprints.py
content/: generate_particle_textures.py  generate_textures.py  noise_texture_gen.py
cut_content/9_dev/: 00_Strengt Comparison.txt  00_magnet test.txt
env/: .all.mk
game_data/shaders/: adaptive_lasers.frag  adaptive_walls.frag  black_hole.frag  dots_indicator.frag  electric_field.frag  force.frag  level_button.frag  magnetic_field.frag  particle.frag  rect_path_parameterization.frag  round_corners.frag  scale_animation.frag  scroll.frag  scroll_and_round_corners.frag  segmented_glow_effect.frag  selected_effect.frag  stats_badge.frag  strength_indicator.frag  test.vert  text_popup.frag  tooltip_background.frag  trail.frag  twinkle.frag  velocity_indicator.frag  wormhole.frag  zapped.frag  zapped.vert
graphical_sources/game_graphics/: devdraw.py  generate_textures.py
levels/: 1_1.txt  1_3.txt  1_4.txt  1_5.txt  1_7.txt  1_8.txt  1_tutorial_1.txt  1_tutorial_1new.txt  1_tutorial_2.txt  1_tutorial_2new.txt  1_tutorial_3.txt  1_tutorial_3new.txt  1_tutorial_4.txt  1_tutorial_5.txt  1_tutorial_5new.txt  1_tutorial_6.txt  1level1.txt  2_1.txt  2_2.txt  2_rullebond.txt  2smooth_turns.txt  3alex.txt  3getgud.txt  3side_to_side.txt  3tutorial.txt  4alex copy.txt  4alex.txt  4full_lap.txt  5full_lap.txt  6aasne.txt  7electric_field_intro.txt  8magnetic_field_demo.txt  9.txt  91.txt  9playground.txt  electric_field_intro.txt  intersection_test.txt  level1.txt  level2.txt  level3.txt  (+7 more)
levels/0_Lab 0/: 00_First steps.txt  00_Neutral tutorial.txt  01_1.txt  02_2.txt  02_Roundabout.txt  03_3.txt  03_Nooks and crannies.txt  04_4.txt  04_Orbits.txt  05_5.txt  05_Momentum.txt  06_6.txt  30_3.txt  50_5.txt  90_9.txt  91_10.txt
levels/0_dev/: _trail test.txt
levels/1_Lab 1/: 01_1.txt  02_2.txt  02_No shortcuts.txt  03_3.txt  03_4 Charges.txt  03_Deadly corners.txt  04_4.txt  04_The cage.txt  05_5.txt  06_6.txt  06_Chandelier.txt  08_8.txt
levels/1_Maze Lab/: 01_1.txt  02_2.txt  03_3.txt  04_4.txt  05_5.txt  06_6.txt
levels/1_Tutorial/: 00_0.txt  01_1.txt  02_2.txt  03_3.txt  04_4.txt  05_5.txt  06_6.txt  07_7.txt  08_8.txt  09_9.txt  10_10.txt  1_1.txt  1_2.txt  1_3.txt  1_4.txt  1_5.txt  1_6.txt  1_7.txt  1_9.txt  2_1.txt  2_2.txt
levels/2_Chapter 1/: 01_Slalom.txt  01_smooth_turns.txt  02_Exit Strategy.txt  02_The Conveyor.txt  03_4 Charges.txt  03_Choices.txt  03_Detour 2.txt  03_Detour.txt  03_Launch.txt  03_Shortcut.txt  04_As all things should be.txt  04_Slalom 2.txt  04_Twist and Bounce.txt  04_alex.txt  05_1 Lap.txt  05_5.txt  07_Slow Drift.txt  07_electric_field_intro.txt  08_Speedslide.txt  08_magnetic_field_demo.txt  10_Journy.txt  2_rullebond.txt  4alex.txt  7electric_field_intro.txt  99MagnetWall.txt  9playground.txt
levels/2_Lab 2/: 01_1.txt  01_Electronic fields.txt  01_Unnamed level.txt  02_2.txt  03_3.txt  03_Against the grain.txt  04_4.txt  05_5.txt  06_6.txt  06_Hug the wall.txt  08_8.txt  09_9.txt  09_Precision.txt
levels/3_Chapter 2/: 01_1.txt  03_Penalty Lap.txt  06_aasne.txt  Speed Limit.txt  Test magnet.txt
levels/3_Dynamic Lab/: 00_Friend.txt  00_Friends.txt  00_Left behind.txt  00_unnamed.txt
levels/3_Magnetic Lab/: 01_1.txt  01_Magnetic fields.txt  02_Stuck.txt  03_Detour.txt  03_Patience.txt  03_Penalty Lap.txt  03_Simen-inspirert.txt  07_7.txt  07_Risk and reward.txt  09_9.txt  10_10.txt  11_11.txt  11_Stamina.txt  Speed Limit.txt
levels/3_WASD/: 01_6.txt  02_7.txt  03_8.txt  03_Maze.txt  04_getgud.txt  09_9.txt  09_ikkejohan.txt  10_playground.txt  11_Mini level.txt  Henrik.txt  Just follow arrows large.txt  Just follow arrows medium.txt  Test magnet.txt
levels/7_WASD/: 01_6.txt  (+10 more)
shaders/: adaptive_lasers.frag  adaptive_walls.frag  black_hole.frag  dots_indicator.frag  electric_field.frag  force.frag  grid_entities_manager.frag  magnetic_field.frag  particle.frag  particle.vert  player.frag  player.vert  round_corners.frag  scale_animation.frag  scroll.frag  scroll_and_round_corners.frag  segmented_glow_effect.frag  selected_effect.frag  stats_badge.frag  strength_indicator.frag  trail.frag  twinkle.frag  wormhole.frag  zapped.frag  zapped.vert
src/: Main.cpp  SFML.cpp  SFML.h  SFML.hpp  acceleration_system.hpp  affected_by_keyboard_forces_component.hpp  animation.hpp  blueprint.cpp  blueprint.hpp  charge_component.hpp  comp_clicked_on.hpp  comp_cursor.hpp  comp_draggable.hpp  comp_physics.hpp  comp_player.hpp  comp_radius.hpp  components.hpp  constants.hpp  content_access_options.cpp  controls_config.hpp  controls_config_serialization.hpp  cursor_and_keys.cpp  cursor_and_keys.hpp  distance.hpp  draw_info.hpp  draw_sprites.hpp  drawable.h  ecs_scene.cpp  ecs_scene.hpp  ecs_scene.tpp  electric_force_system.hpp  entity_creation.cpp  entity_creation.hpp  entity_creation.tpp  entity_creation_observer.cpp  entity_creation_observer.hpp  error.hpp  event_system.hpp  folder_definitions.hpp  force_system.hpp  (+75 more)
user/: level_stats.txt
(+424 files in other folders)
